--- a/index.html
+++ b/index.html
@@ -318,7 +318,22 @@
             <a href="#tours" class="btn">Ver Tours Disponibles</a>
         </div>
     </section>
-
+<!-- modify this form HTML and place wherever you want your form -->
+<form
+  action="https://formspree.io/f/xgoklbqe"
+  method="POST"
+>
+  <label>
+    Your email:
+    <input type="email" name="email">
+  </label>
+  <label>
+    Your message:
+    <textarea name="message"></textarea>
+  </label>
+  <!-- your other form fields go here -->
+  <button type="submit">Send</button>
+</form>
     <!-- Tours -->
     <section id="tours">
         <h2 class="section-title">Nuestros <span>Tours</span></h2>
