--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
         }
 
         .logo-icon {
-            font-size: 2.5rem;
+            width: 40px;
+            height: 40px;
+            object-fit: contain;
+            border-radius: 8px;
         }
 
         .logo h1 {
