--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
     <!-- HEADER -->
     <header>
         <div class="logo">
-            <img src="imagenes/Lindo_Tours.jpeg" alt="Lindo Tours Logo" class="Logo Icon">
+            <img src="imagenes/Lindo_Tours.jpeg" alt="Lindo Tours Logo" class="logo-icon">
             <h1>Lindo Tours</h1>
         </div>
         <div class="controls">
