Mejoro la division entre servicios

--- a/index.html
+++ b/index.html
@@ -342,6 +342,17 @@
             transform: scale(1.05);
             box-shadow: 0 10px 30px rgba(0,0,0,0.2);
         }
+        
+        .section-divider {
+            text-align: center;
+            padding: 40px 20px;
+            color: white;
+        }
+
+        .section-divider h3 {
+            font-size: 1.8rem;
+            text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
+        }
 
         /* FOOTER */
         footer {
